# rag-enterprise-system

./: .env.example  .env.production  .gitignore  CLAUDE.md  DEPLOYMENT_GUIDE.md  DEV_GUIDE.md  DOCKER_ACCOUNTS.md  IMPLEMENTATION_PLAN.md  README.md  STAGE_2_3_COMPLETION_REPORT.md  create-dev-data.sql  dev.sh  docker-compose.deploy.yml  docker-compose.production.yml  docker-compose.yml  package-lock.json  package.json
.claude/: settings.local.json
apps/backend/: .env.example  Dockerfile  alembic.ini  init-db.sql  pyproject.toml  requirements.txt
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 001_initial_schema.py  002_add_vector_column.py  0752c2d6bc3f_add_document_versioning_and_tags.py  4a2466e9a208_add_user_names_shared_documents_.py
apps/backend/app/: main.py
apps/backend/app/api/: admin.py  auth.py  chat.py
apps/backend/app/core/: config.py  deps.py  security.py
apps/backend/app/db/: database.py  models.py
apps/backend/app/schemas/: auth.py  chat.py  company.py  dashboard.py  document.py  model.py  user.py
apps/backend/app/services/: auth_service.py  company_service.py  dashboard_service.py  document_processor.py  document_service.py  error_logging_service.py  feedback_service.py  model_service.py  monitoring_service.py  quality_service.py  rag_service.py  user_service.py
apps/backend/tests/: conftest.py  test_company_service.py  test_main.py
apps/frontend/: .eslintrc.js  .prettierignore  Dockerfile  eslint.config.js  nginx.conf.template  package.json  vite.config.ts
apps/frontend/src/: App-test.tsx  App.tsx  main.tsx
apps/frontend/src/api/: admin.ts  auth.ts  client.ts  mock-auth.ts  user.ts
apps/frontend/src/components/: Layout.tsx
apps/frontend/src/pages/: AdminDashboard.tsx  ChatPage.tsx  LoginPage.tsx
apps/frontend/src/pages/admin/: CompaniesPage.tsx  FeedbackDashboard.tsx  KnowledgeChunksPage.tsx  KnowledgeManagementPage.tsx
apps/frontend/src/store/: authStore-simple.ts  authStore.ts
apps/frontend/src/styles/: theme.ts
apps/frontend/src/utils/: jwt.ts
docs/: architect.md  front-end-spec.md  prd.md
scripts/: dev-setup.sh
